feat: entrypoint work pt 4
- feat(base): optimized rust routines for encodings
- feat(base): build under `no_std`
- feat(model): `model` crate initial structure
- feat(sqlite): implement rust sqlite api layer
- feat(project): new project crate
- fix: sqlite symbol access from umbrella
- fix: don't strip cargo outputs
- fix: many fixes for `builder` crates
- fix: don't move around third party libs
- fix: clean for zlib and sqlite
- fix: sqlite build flags aren't making it in
- fix: rename `core` crate to `base`
- fix: dynamic/static library builds for crates
- fix(sqlite): loading of native sqlite libs in native image
- chore: run `cargo test` with `make test`
- chore: add some basic jvm and native encoding benchmarks
- chore: merge `cli-bridge` module into `cli`
- chore: rewrite `CliNativeBridge` in kotlin
- chore: initial build wiring for protocol models in rust
- chore: makefile support for ccache and sccache
- chore: `cargo fuzz` support
- chore: run `cargo update`
- chore: run clippy
- chore: run fmt
- chore: update module pins, baselines
- chore: update verification metadata + lockfiles
- chore: update kotlinx benchmark → `0.4.11`
- chore: update gradle → `8.9`
- chore: update kotlin → `2.0.10-RC`
- chore: update ksp → `2.0.10-RC-1.0.23`

Signed-off-by: Sam Gammon <sam@elide.ventures>