@@ -16,7 +16,6 @@
 import elide.internal.conventions.kotlin.*
 
 plugins {
-  java
   kotlin("multiplatform")
   kotlin("plugin.serialization")
 
@@ -86,14 +85,4 @@ configurations {
 
     extendsFrom(configurations["jvmRuntimeClasspath"])
   }
-}
-
-tasks.compileJava {
-  options.compilerArgumentProviders.add(CommandLineArgumentProvider {
-    listOf(
-      "--add-exports=elide.protocol.core/elide.proto=elide.protocol.kotlinx",
-      "--add-exports=elide.protocol.core/elide.proto.internal.annotations=elide.protocol.kotlinx",
-      "--add-reads=elide.protocol.kotlinx=ALL-UNNAMED"
-    )
-  })
 }
